[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/Entities/PlayerDetectionZone.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/Entities/Player/Sprite Sheet.png" type="Texture" id=2]
[ext_resource path="res://src/Menus/OpeningScene/PlayerActor.gd" type="Script" id=3]
[ext_resource path="res://src/Menus/DialogBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/Menus/OpeningScene/StoryMovie.gd" type="Script" id=5]
[ext_resource path="res://src/Menus/Portal.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/Music and Sounds/assets_music_THEME_1.ogg" type="AudioStream" id=7]

[sub_resource type="CapsuleShape2D" id=1]
radius = 7.35308
height = 9.41231

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 51 )

[sub_resource type="CircleShape2D" id=3]
radius = 33.0

[node name="Story" type="Node2D"]
script = ExtResource( 5 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 320.0
margin_bottom = 180.0
color = Color( 0.0928, 0.092, 0.1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Portal" parent="." instance=ExtResource( 6 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="DialogBox" parent="CanvasLayer" instance=ExtResource( 4 )]
dialog = [ "Access granted! Portal opening!" ]

[node name="PlayerActor" type="KinematicBody2D" parent="."]
position = Vector2( -20, 81 )
collision_layer = 2
collision_mask = 0
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="PlayerActor"]
position = Vector2( 3.8147e-06, -7.62939e-06 )
texture = ExtResource( 2 )
flip_h = true
hframes = 8
vframes = 6
frame = 37

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerActor"]
position = Vector2( 3.8147e-06, -7.62939e-06 )
rotation = 0.404916
shape = SubResource( 1 )

[node name="PlayerStopper" type="StaticBody2D" parent="."]
position = Vector2( 274, 76 )
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerStopper"]
shape = SubResource( 2 )

[node name="PlayerDetectionZone" parent="PlayerStopper" instance=ExtResource( 1 )]

[node name="CollisionShape2D" parent="PlayerStopper/PlayerDetectionZone" index="0"]
position = Vector2( -15, 0 )
shape = SubResource( 3 )

[node name="PortalTimer" type="Timer" parent="."]
one_shot = true

[node name="PortalCloseTimer" type="Timer" parent="."]
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
autoplay = true

[connection signal="finished" from="Portal" to="." method="_on_Portal_finished"]
[connection signal="finished_dialog" from="CanvasLayer/DialogBox" to="PlayerActor" method="_on_DialogBox_finished_dialog"]
[connection signal="timeout" from="PortalTimer" to="." method="_on_PortalTimer_timeout"]
[connection signal="timeout" from="PortalTimer" to="PlayerActor" method="_on_PortalTimer_timeout"]
[connection signal="timeout" from="PortalCloseTimer" to="." method="_on_PortalCloseTimer_timeout"]

[editable path="PlayerStopper/PlayerDetectionZone"]
